--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "colors": ">=0.6 <1",
     "optimist": ">=0.3.5 <1",
     "underscore": ">=1.4 <2",
-    "semver": "~2.2.1"
+    "semver": "~2.2.1",
+    "argparse": ">=0.1.15"
   },
   "peerDependencies": {
     "coffee-script": ">=1.6.2 <2"
